--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
     <string name="app_name">Quizz</string>
     <string name="action_settings">Settings</string>
+    <string name="start">Start</string>
+    <string name="creditos">Creditos</string>
+    <string name="opcao">Opções</string>
+    <string name="cancelar">Cancelar</string>
+    <string name="guardar">Guardar</string>
+    <string name="nome">Nome</string>
+    <string name="idade">Idade:</string>
+    <string name="textviewNome">TextView</string>
+    <string name="textviewIdade">TextView</string>
 </resources>
