--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,16 @@
 <resources>
-    <string name="app_name">Quizz</string>
+    <string name="app_name" translatable="false">Quizz</string>
     <string name="action_settings">Settings</string>
     <string name="start">Start</string>
-    <string name="creditos">Creditos</string>
-    <string name="opcao">Opções</string>
-    <string name="cancelar">Cancelar</string>
-    <string name="guardar">Guardar</string>
-    <string name="nome">Nome</string>
-    <string name="idade">Idade:</string>
+    <string name="creditos">Credits</string>
+    <string name="opcao">Option</string>
+    <string name="cancelar">Cancel</string>
+    <string name="guardar">Save</string>
+    <string name="nome">Name</string>
+    <string name="idade">Age:</string>
     <string name="textviewNome">TextView</string>
     <string name="textviewIdade">TextView</string>
-    <string name="nome_obrig">O campo está vazio</string>
-    <string name="jogador_adicionado">Jogador Criado</string>
-    <string name="charact">Não é possível introduzir caracteres especiais!</string>
+    <string name="nome_obrig">Can\'t be empty</string>
+    <string name="jogador_adicionado">New Player Add</string>
+    <string name="charact">Special characters are not valid!</string>
 </resources>
