--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name" translatable="false">Quizz</string>
+    <string name="app_name">Quizz</string>
     <string name="action_settings">Settings</string>
     <string name="start">Start</string>
     <string name="creditos">Credits</string>
