--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -14,4 +14,17 @@
     <string name="charact">Não é possível introduzir caracteres especiais!</string>
     <string name="textviewNome">TextView</string>
     <string name="textviewIdade">TextView</string>
+    <string name="escolha_o_seu_tema">Escolha o seu tema:</string>
+    <string name="cancelar1">Cancelar</string>
+    <string name="eliminar1">Eliminar</string>
+    <string name="guardar1">Guardar</string>
+    <string name="defini_es">Definições</string>
+    <string name="buttonCancelar2">Button</string>
+    <string name="buttoncancelar2">Cancelar</string>
+    <string name="buttonEliminar3">Eliminar</string>
+    <string name="temas">Temas</string>
+    <string name="desporto">Desporto</string>
+    <string name="ci_ncia">Ciência</string>
+    <string name="artes">Artes</string>
+    <string name="buttonCancelar1">Button</string>
 </resources>
