Criação do primeiro projeto

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="desporto">Sport</string>
     <string name="ci_ncia">Science</string>
     <string name="artes">Arts</string>
+    <string name="outros">Outros</string>
 </resources>
